Create login and registration

--- a/site_web/blog/static/main.css
+++ b/site_web/blog/static/main.css
@@ -21,12 +21,12 @@ ul {
   margin: 0;
 }
 
-.bg-blue {
-  background-color: #a351f5;
+.bg-purple {
+  background-color: #bb72d6
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #cbd5db
 }
 
 .site-header .navbar-nav .nav-link:hover {
