--- a/site_web/blog/templates/blog/about.html
+++ b/site_web/blog/templates/blog/about.html
@@ -1,4 +1,37 @@
 {% extends "blog/base.html" %}
+
 {% block content %}
-    <h1>Это моя первая попытка написать сайт на Django.</h1>
+    <h1>Добро пожаловать на YuroKeep!</h1>
+
+    <p>
+        YuroKeep – ваша личная площадка для творчества и обмена постами.
+        Узнайте, почему мы идеальное место для самовыражения и обмена опытом.
+    </p>
+
+    <h2>Наша миссия</h2>
+    <p>
+        YuroKeep создан для творчества и уважения к разнообразию мнений.
+        Мы верим в уникальность каждого взгляда на мир и предоставляем платформу
+        для свободного выражения ваших идей и вдохновения.
+    </p>
+
+    <h2>Ваша история имеет значение</h2>
+    <p>
+        Будьте профессионалом или энтузиастом, у нас каждый пост важен.
+        Создавайте контент, который вас волнует, загружайте фотографии
+        и участвуйте в обсуждениях с нашим дружелюбным сообществом.
+    </p>
+
+    <h2>Уютное сообщество</h2>
+    <p>
+        YuroKeep – не просто платформа, а настоящее сообщество, где каждый
+        находит свое место. Мы ценим разнообразие тем и точек зрения,
+        создавая атмосферу взаимопонимания и вдохновения.
+    </p>
+
+    <h2>Присоединяйтесь к нам!</h2>
+    <p>
+        YuroKeep приглашает вас в увлекательное путешествие творчества.
+        Присоединяйтесь к нам сегодня и дайте своим историям возможность засиять!
+    </p>
 {% endblock content %}
