--- a/site_web/blog/templates/blog/base.html
+++ b/site_web/blog/templates/blog/base.html
@@ -21,9 +21,9 @@
 </head>
 <body>
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-blue fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'blog_home' %}"><i class='bx bxs-rocket bx-tada-hover'></i> YuroKeep</a>
+          <a class="navbar-brand mr-4" href="{% url 'blog_home' %}"><i class='bx bxs-comment-dots bx-tada-hover'></i> YuroKeep</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,8 +34,13 @@
             </div>
             <!-- Правая часть навигационной панели -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Вход</a>
-              <a class="nav-item nav-link" href="#">Регистрация</a>
+              {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="{% url 'profile' %}">Профиль</a>
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Выход</a>
+              {% else %}
+              <a class="nav-item nav-link" href="{% url 'login' %}">Вход</a>
+              <a class="nav-item nav-link" href="{% url 'register' %}">Регистрация</a>
+              {% endif %}
             </div>
           </div>
         </div>
@@ -44,13 +49,20 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
+          {% if messages %}
+        	{% for message in messages %}
+          	<div class="alert alert-{{ message.tags }}">
+            	{{ message }}
+          	</div>
+        	{% endfor %}
+          {% endif %}
           {% block content %}
           {% endblock %}
         </div>
         <div class="col-md-4">
           <div class="content-section">
             <h3>Разделы</h3>
-            <p class='text-muted'>новости и события
+            <p class='text-muted'>Новости и события
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Новые записи</li>
                 <li class="list-group-item list-group-item-light">Объявления</li>
@@ -65,7 +77,7 @@
     </main>
     <!-- Футер закреплен внизу, независимо от количества постов на странице -->
     <footer class="text-center bg-dark">
-      <p><a href="{% url 'blog_home' %}">© Клуб YuroKeep 2023</a></p>
+      <p><a href="{% url 'blog_home' %}">© YuroKeep 2023</a></p>
     </footer>
 
     <!-- Дополнительные скрипты JavaScript -->
