--- a/site_web/blog/templates/blog/base.html
+++ b/site_web/blog/templates/blog/base.html
@@ -31,6 +31,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link " href="{% url 'blog_home' %}">Главная</a>
               <a class="nav-item nav-link" href="{% url 'blog_about' %}">О сайте</a>
+              <a class="nav-item nav-link" href="{% url 'post_create' %}">Новая запись</a>
             </div>
             <!-- Правая часть навигационной панели -->
             <div class="navbar-nav">
