--- a/site_web/blog/static/main.css
+++ b/site_web/blog/static/main.css
@@ -81,6 +81,82 @@ a.article-title:hover {
   vertical-align: middle;
 }
 
+.article-com {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    width: 530px;
+    padding: 12px;
+    background-color: #f5f5f5;
+    border-radius: 16px;
+    font-weight: 500;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.material-symbols-outlined {
+    text-decoration: none !important;
+    color: #6b6b6b;
+    transition:  0.5s ease;
+}
+
+.material-symbols-outlined:hover {
+     transform: scale(1.1);
+}
+
+.article-link {
+    text-align: center;
+    text-decoration: none !important;
+    color: #6b6b6b;
+    cursor: pointer;
+}
+
+.article-link:hover .material-symbols-outlined {
+    transform: scale(1.1);
+    fill: #666;
+}
+
+.article-link:hover .article-link span {
+    transform: scale(1);
+    color: #6b6b6b;
+}
+
+.container-post input {
+    position: absolute;
+    opacity: 0;
+    height: 0;
+    width: 0;
+}
+
+.container-post {
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    color: #6b6b6b;
+}
+
+.container-post svg {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    transition: transform 0.3s ease;
+    fill: #666;
+}
+
+.container-post svg:hover {
+    transform: scale(1.1);
+}
+
+.container-post input:checked ~ svg {
+    fill: #E3474F;
+}
+
+
 .account-img {
   height: 125px;
   width: 125px;
@@ -90,6 +166,78 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+
+.comment-form {
+    max-height: 600px;
+    margin: auto;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
+.comments {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 20px;
+}
+
+.comment {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+	align-items: flex-start;
+	width: 720px;
+	padding: 12px 20px 12px;
+	background-color: #eee;
+	border-radius: 12px;
+}
+
+.image {
+	border-radius: 50%;
+	width: 125px;
+	height: 125px;
+	aspect-ratio: 1/1;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	width: 100%;
+}
+
+.meta {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 90%;
+	padding: 0 0 1rem 0;
+	border-bottom: 1px solid #6862A9;
+}
+
+.name {
+	color: #6862A9;
+	font-weight: 500;
+	font-size: 20px;
+}
+
+.date {
+	font-weight: 500;
+	color: #3e3e3e;
+}
+
+.comment-count{
+    display: flex;
+	flex-direction: row;
+	gap: 20px;
+	align-items: flex-start;
+	width: 20px;
+	padding: 12px 20px 12px;
+	background-color: #eee;
+	border-radius: 12px;
 }
 
 footer {
