--- a/site_web/users/templates/users/profile.html
+++ b/site_web/users/templates/users/profile.html
@@ -7,6 +7,7 @@
         <div class="media-body">
           <h2 class="account-heading">{{ user.username }}</h2>
           <p class="text-secondary">{{ user.email }}</p>
+          <a class="btn btn-outline-info" href="{% url 'user-posts' user.username %}"> Мои посты </a>
         </div>
       </div>
       <form method="POST" enctype="multipart/form-data">
